# FastAPI

./: .gitignore  Employee_API_guide.ipynb  README.md  fastapi_study_guide.html  main.py  model.py  pyproject.toml  requirements.txt
1. Basic-app/: main.py
2. CRUD-app/: crud.py  database.py  main.py  models.py  schemas.py
docs/: fastapi.html  index.html
