[project]
name = "employee-management-api"
version = "0.1.0"
description = "A FastAPI CRUD service for managing employee records."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator",
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
]

keywords = [
    "fastapi",
    "crud",
    "employee-management",
]
